# cppml

./: CMakeLists.txt  main.cpp  temp.cpp  temp.txt
experiments/: exp_linreg.cpp  exp_mnist_digits.cpp  exp_quadreg.cpp  exp_timing.cpp
include/: autodiff.hpp  autodiff.tpp  autograd.hpp  backend.hpp  config.hpp  data.hpp  dataloader.hpp  linalg.hpp  loss.hpp  model.hpp  module.hpp  scoped_timer.hpp  shape.hpp  solver.hpp  tensor.hpp  test.hpp  timing.hpp
include/backend/: backend_guard.hpp  backend_type.hpp  base.hpp  cpu_multi_thread_buffer.hpp  cpu_single_thread_buffer.hpp  cpu_utils.hpp  cuda_buffer.hpp  shared_buffer.hpp  thread_pool.hpp
include/data/: data_loader.hpp  mnist_dataset.hpp
include/linalg/: shape.hpp  tensor.hpp  tensor.tpp
include/module/: base.hpp  linear.hpp  linear_relu.hpp  mlp.hpp
include/timing/: scoped_profiler.hpp  scoped_timer.hpp
old/: autograd.hpp  layer.hpp  model.cpp  tensor.cpp  tensor.hpp
src/: dataloader.cpp  tensor.tpp  test.cpp  thread_pool.cpp
src/backend/: cuda_buffer.cu  cuda_buffer_inst.inc  thread_pool.cpp
src/data/: mnist_dataset.cpp
src/linalg/: shape.cpp
temp/: cpu_multi_thread_buffer.hpp  cuda_buffer.hpp  main.cpp  tensor.hpp  thread_pool.hpp
tests/: test_autodiff.cpp  test_old.cpp  test_tensor.cpp
